Added user rankings by badge to api
